--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -35,6 +35,8 @@ services:
 
   db:
     image: postgres:14.0-alpine
+    ports:
+      - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     environment:
