--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -44,7 +44,7 @@ services:
       - POSTGRES_USER=anansi_project
       - POSTGRES_PASSWORD=anansi_project
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: ["CMD-SHELL", "pg_isready -U anansi_project"]
       interval: 5s
       timeout: 5s
       retries: 5
