--- a/compose/local/web/dockerfile
+++ b/compose/local/web/dockerfile
@@ -1,3 +1,12 @@
+FROM node:16-stretch-slim as frontend-builder
+
+WORKDIR /anansi_app
+COPY . .
+
+RUN npm install
+RUN npm run build
+RUN npm run start
+
 FROM python:3.10-slim-buster
 
 ENV PYTHONUNBUFFERED 1
@@ -24,5 +33,16 @@ RUN sed -i 's/\r$//g' /start
 RUN chmod +x /start
 
 WORKDIR /anansi_app
+
+RUN mkdir /anansi_app/static
+RUN mkdir /anansi_app/media
+
+# copy project code
+COPY . .
+COPY --from=frontend-builder /anansi_app/frontend/build /anansi_app/frontend/build
+
+RUN chown -R django:django /anansi_app
+
+USER django
 
 ENTRYPOINT ["/entrypoint"]
