--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DJANGO_SECRET_KEY=$*ux)_&ij8#lj+@lwd95vp@qn%jg8m)!ptda(=w$t-i*$(weu&
 DEBUG=False
 DJANGO_LOGLEVEL=info
-DJANGO_ALLOWED_HOSTS=localhost,code.run,my-docker-django-app-6.onrender.com,railway.com,13.60.198.209,127.0.0.1
+DJANGO_ALLOWED_HOSTS=localhost,code.run,my-docker-django-app-6.onrender.com,railway.com,13.60.198.209,127.0.0.1,9e8c-41-90-177-205.ngrok-free.app
 SQL_ENGINE=django.db.backends.postgresql
 SQL_NAME=dockerdjango
 SQL_USERNAME=dbuser
