--- a/.env
+++ b/.env
@@ -6,5 +6,5 @@ SQL_ENGINE=django.db.backends.postgresql
 SQL_NAME=postgres
 SQL_USERNAME=postgres
 SQL_PASSWORD=bananamilkshake
-SQL_HOST=localhost,database-1.cd22mqwgi862.eu-north-1.rds.amazonaws.com
+SQL_HOST=database-1.cd22mqwgi862.eu-north-1.rds.amazonaws.com
 SQL_PORT=5432 
